# commodore-infra

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  SESSION-ROADMAP.md  pyproject.toml  skills-lock.json
.agents/: session-state.json  skills
.claude/: skills
.claude/skills/: swain-teardown
.tickets/: cis0pm22b-91j6.md  cis0pm22b-hhoo.md  cis0pm22b-t0yv.md  cis0pm22b-vot1.md  cis0pm22b-wgf4.md  ipds0ad2e0pas-08qm.md  ipds0ad2e0pas-2xxp.md  ipds0ad2e0pas-5w2h.md  ipds0ad2e0pas-9f9q.md  ipds0ad2e0pas-b2p8.md  ipds0ad2e0pas-d58g.md  ipds0ad2e0pas-dzim.md  ipds0ad2e0pas-g4qe.md  ipds0ad2e0pas-gdr6.md  ipds0ad2e0pas-izwr.md  ipds0ad2e0pas-k2ko.md  ipds0ad2e0pas-kbpt.md  ipds0ad2e0pas-mvi2.md  ipds0ad2e0pas-rt07.md  ipds0ad2e0pas-swe8.md  ipds0ad2e0pas-t4jp.md  ipds0ad2e0pas-v0oz.md  ipds0ad2e0pas-vh9v.md  ipds0ad2e0pas-wtm5.md  ipds0ad2e0pas-xs6o.md  ipds0ad2e0pas-ydpa.md  ipds0ad2e0pas-yf7g.md  ipds0ad2e0pas-zacv.md
docs/adr/: list-adr.md
docs/design/: list-design.md
docs/docs/: plugin-development.md
docs/epic/: list-epic.md
docs/examples/commodore-plugin-example/: README.md  pyproject.toml
docs/examples/commodore-plugin-example/src/commodore_plugin_example/: __init__.py
docs/initiative/: list-initiative.md
docs/journey/: list-journey.md
docs/persona/: list-persona.md
docs/research/: list-spike.md
docs/spec/: list-spec.md
docs/swain-retro/: 2026-04-04-spike-001-full-implementation.md
docs/vision/: list-vision.md
src/commodore/: cli.py
src/commodore/adapters/: stubs.py
tests/: test_cli.py
tests/adapters/: test_caddy.py  test_cloudflare_dns.py  test_docker_compose.py
tests/core/: test_classification.py  test_config.py  test_discovery.py  test_drift.py  test_engine.py  test_health.py  test_models.py  test_network.py  test_placement.py  test_plugin_discovery.py  test_plugin_errors.py  test_plugin_registry.py  test_ports.py  test_provider.py  test_provider_registry.py  test_registry.py  test_snapshot.py  test_stubs.py
tests/integration/: test_example_plugin.py
(+90 files in other folders)
