[project]
name = "commodore"
version = "0.1.0"
description = "Hexagonal architecture infrastructure platform with security-classified service placement"
requires-python = ">=3.11"
dependencies = [
    "click",
    "ruamel.yaml",
]

[project.scripts]
cdre = "commodore.cli:app"

[project.entry-points."commodore.adapters"]
dns_cloudflare = "commodore.adapters.dns.cloudflare:CloudflareDNS"
reverse_proxy_caddy = "commodore.adapters.reverse_proxy.caddy:CaddyAdapter"
container_docker_compose = "commodore.adapters.container.docker_compose:DockerComposeAdapter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/commodore"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
