[project]
name = "commodore-plugin-example"
version = "0.1.0"
description = "Example plugin for Commodore demonstrating adapter development"
requires-python = ">=3.11"
dependencies = [
    "commodore>=0.1.0",
]

[project.entry-points."commodore.adapters"]
# Entry point format: {port}_{provider} = module:AdapterClass
# This plugin demonstrates a stub DNS adapter
example_dns = "commodore_plugin_example:ExampleDNSAdapter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/commodore_plugin_example"]